--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -75,7 +75,6 @@
                 <option value="Lightning">Lightning</option> 
               </select>
               <br>
-              <br>
               <select id="type-component" class="form-select" aria-label="Default select example">
                 <option selected>Select type component</option>
                 <option value="Output">Output</option>
@@ -88,6 +87,13 @@
                 class="btn btn-warning"
               />
             </form>
+          </div>
+          <br>
+          <div class="card text-white bg-primary mb-3" style="max-width: 20rem;">
+            <div class="card-header">Precio Total</div>
+            <div class="card-body">
+              <h4 class="card-title">= $00000</h4>
+            </div>
           </div>
         </div>
 
